chore: 🤖 h2, jpa, sql 설정과 ddl, dml 작성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=Holiday Keeper
+
+# h2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# jpa
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#sql
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:ddl.sql
+spring.sql.init.data-locations=classpath:dml.sql
