--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,17 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
-#sql
+# sql
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:ddl.sql
 spring.sql.init.data-locations=classpath:dml.sql
+
+# nager
+date.nager.at.base-url=https://date.nager.at/api/v3/
+date.nager.at.countries=AvailableCountries
+date.nager.at.holidays=PublicHolidays/{year}/{countryCode}
