--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,3 @@
 # jpa
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.highlight_sql=false
